// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should enable sort order select when sort field provided 1`] = `
<Fragment>
  <EuiPanel>
    <EuiTitle
      size="xs"
    >
      <h5>
        <FormattedMessage
          defaultMessage="Tooltip fields"
          id="xpack.maps.esSearch.tooltipsTitle"
          values={Object {}}
        />
      </h5>
    </EuiTitle>
    <EuiSpacer
      size="m"
    />
    <TooltipSelector
      fields={null}
      onChange={[Function]}
      tooltipFields={Array []}
    />
  </EuiPanel>
  <EuiSpacer
    size="s"
  />
  <EuiPanel>
    <EuiTitle
      size="xs"
    >
      <h5>
        <FormattedMessage
          defaultMessage="Sorting"
          id="xpack.maps.esSearch.sortTitle"
          values={Object {}}
        />
      </h5>
    </EuiTitle>
    <EuiSpacer
      size="m"
    />
    <EuiFormRow
      describedByIds={Array []}
      display="columnCompressed"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label="Field"
      labelType="label"
    >
      <SingleFieldSelect
        compressed={true}
        fields={null}
        onChange={[Function]}
        placeholder="Select sort field"
        value="@timestamp"
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="columnCompressed"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label="Order"
      labelType="label"
    >
      <EuiSelect
        compressed={true}
        disabled={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "ascending",
              "value": "asc",
            },
            Object {
              "text": "descending",
              "value": "desc",
            },
          ]
        }
        value="DESC"
      />
    </EuiFormRow>
  </EuiPanel>
  <EuiSpacer
    size="s"
  />
  <EuiPanel>
    <ScalingForm
      clusteringDisabledReason={null}
      filterByMapBounds={true}
      indexPatternId="indexPattern1"
      numberOfJoins={0}
      onChange={[Function]}
      scalingType="LIMIT"
      supportsClustering={false}
    />
  </EuiPanel>
  <EuiSpacer
    size="s"
  />
</Fragment>
`;

exports[`should render update source editor 1`] = `
<Fragment>
  <EuiPanel>
    <EuiTitle
      size="xs"
    >
      <h5>
        <FormattedMessage
          defaultMessage="Tooltip fields"
          id="xpack.maps.esSearch.tooltipsTitle"
          values={Object {}}
        />
      </h5>
    </EuiTitle>
    <EuiSpacer
      size="m"
    />
    <TooltipSelector
      fields={null}
      onChange={[Function]}
      tooltipFields={Array []}
    />
  </EuiPanel>
  <EuiSpacer
    size="s"
  />
  <EuiPanel>
    <EuiTitle
      size="xs"
    >
      <h5>
        <FormattedMessage
          defaultMessage="Sorting"
          id="xpack.maps.esSearch.sortTitle"
          values={Object {}}
        />
      </h5>
    </EuiTitle>
    <EuiSpacer
      size="m"
    />
    <EuiFormRow
      describedByIds={Array []}
      display="columnCompressed"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label="Field"
      labelType="label"
    >
      <SingleFieldSelect
        compressed={true}
        fields={null}
        onChange={[Function]}
        placeholder="Select sort field"
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="columnCompressed"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label="Order"
      labelType="label"
    >
      <EuiSelect
        compressed={true}
        disabled={true}
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "ascending",
              "value": "asc",
            },
            Object {
              "text": "descending",
              "value": "desc",
            },
          ]
        }
        value="DESC"
      />
    </EuiFormRow>
  </EuiPanel>
  <EuiSpacer
    size="s"
  />
  <EuiPanel>
    <ScalingForm
      clusteringDisabledReason={null}
      filterByMapBounds={true}
      indexPatternId="indexPattern1"
      numberOfJoins={0}
      onChange={[Function]}
      scalingType="LIMIT"
      supportsClustering={false}
    />
  </EuiPanel>
  <EuiSpacer
    size="s"
  />
</Fragment>
`;
